--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   cached_network_image: 2.2.0+1
+  shared_preferences: ^0.5.8
+  global_configuration: 1.5.0
+  mvc_pattern: 6.1.3+2
+  numberpicker: ^1.3.0
+  intl: ^0.16.1
+  advance_pdf_viewer: ^1.2.0
+  image_picker: 0.6.6+1
+  http_auth: ^0.2.9
+  webview_flutter: ^0.3.22+1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/cfg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
